# meowcam-bridge

./: .gitignore  CHANGELOG.md  PACKAGING.md  PROJECT_STATE.md  README.md  SETUP.md  build_windows.py  launch.bat  launch.sh  meowcam-bridge-test.json  meowcam-bridge.spec  pyproject.toml
docs/: ATEM_SUPERSOURCE_RESEARCH.md
docs/v0.2-preview-design/: RESEARCH_FINDINGS.md  mockup.html  preview-prototype.py  video-client.js
examples/: atem_supersource_2x2.py  config.example.json
hooks/: runtime_hook_ndi.py
research/: NDI_RESEARCH.md  ndi_stream_server.py  usb_stream_server.py
src/meowcam_bridge/: __init__.py  __main__.py  app.py  atem.py  bridge.py  config.py  tray_app.py  video.py  video_manager.py
src/meowcam_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meowcam_bridge/protocols/: __init__.py  base.py  input_ptzoptics.py  input_ptzoptics_visca_udp.py  output_sony_brbk.py  visca.py  visca_commands.py
src/meowcam_bridge/web/: app.js  index.html  styles.css
tests/: test_api.py  test_atem.py  test_bridge_mapping.py  test_config.py  test_input_ptzoptics.py  test_sony_brbk.py  test_video.py  test_visca.py
